<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutModal"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/сheckBoxRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:buttonTint="@color/grey_light2"
        android:text="@string/checkbox_regular_task"
        android:textColor="@color/grey_light2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/grey_light"
        android:hint="@string/text_add_task"
        android:inputType="textCapSentences"
        android:maxHeight="120dp"
        android:padding="12dp"
        android:textColor="@color/edit_text"
        android:textColorHighlight="@color/grey_dark"
        android:textColorHint="@color/grey_light"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/text_priority"
        android:textAlignment="center"
        android:textColor="@color/grey_light2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/red_text"
            android:buttonTint="@color/black"
            android:paddingEnd="5dp"
            android:text="@string/radio_button_red"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonDefault"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/yellow_text"
            android:buttonTint="@color/black"
            android:paddingEnd="5dp"
            android:text="@string/radio_button_blue"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/grey_light2"
            android:buttonTint="@color/black"
            android:paddingEnd="5dp"
            android:text="@string/radio_button_green"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonAddTask"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_task_button_text"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>
